# jzx

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  README.md  README_API_SERVER.md  asr_service.py  compose.nginx.yml  detection_engine.py  environment.yml  kafka_detection_worker.py  kafka_event_models.py  kafka_settings.py  mysql-setup.sql  oss_result_uploader.py  pom.xml  requirements-asr.txt  requirements-kafka.txt  start.sh  test_kafka.py
assistant-service/: pom.xml
auth-service/: pom.xml
deploy/: docker.env.example
detection-service/: pom.xml
docs/: 2026-05-17-detection-oss-overall-design.md  2026-05-17-multi-agent-implementation-plan.md  2026-05-17-multi-agent-overall-design.md  2026-05-17-remote-fastapi-implementation-and-integration.md  2026-05-20-detection-task-capture-fields.sql  2026-05-20-kafka-detection-task-implementation-plan.md  (+26 more)
python_assistant_service/: Dockerfile  README.md  __init__.py  environment.yml  pyproject.toml
python_assistant_service/app/: __init__.py  agent_config.py  clients.py  deep_agent.py  graph.py  knowledge.py  loader.py  main.py  memory.py  routing.py  schemas.py  security.py  service.py  settings.py  skills.py  state.py
python_assistant_service/config/: subagents.yaml
python_assistant_service/config/subagents/: detection-specialist.yaml  ops-specialist.yaml  report-specialist.yaml  resource-specialist.yaml
python_assistant_service/tests/: __init__.py  test_agent_config.py  test_clients.py  test_deep_agent.py  test_graph.py  test_knowledge.py  test_memory.py  test_security.py  test_skills.py
(+564 files in other folders)
